--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# paranoia = "*"
-# paranoia-caller = "*"
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+
